--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "axios": "^0.19.0",
     "next": "^9.1.1",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-ga": "^2.7.0"
   },
   "scripts": {
     "dev": "next",
