--- a/.babelrc
+++ b/.babelrc
@@ -2,11 +2,18 @@
   "presets": ["next/babel"],
   "plugins": [
     [
-      "babel-plugin-styled-components", 
+      "babel-plugin-styled-components",
       {
         "ssr": true,
         "displayName": true,
         "preprocess": false
+      }
+    ],
+    [
+      "babel-plugin-root-import",
+      {
+        "rootPathPrefix": "~",
+        "rootPathSuffix": "src"
       }
     ]
   ]
